tests/paczka1/small_fuzzy/15733966.err
Error in line 3: A775 S359 18,2
Error in line 2: U5p3Uut S359 41,6
Error in line 10: U5p3Uut A775 88,3
Error in line 11: U5p3Uut A22 42,7
Error in line 5: TG2TZZdFOyQ A22 35,0
